add cmdExec module, move error handler to goroutine

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}\\main.go",
+            "program": "C:\\Users\\AaronWilliams\\go\\src\\github.com\\Zaptitude\\Echidna\\main.go",
             "env": {},
             "args": []
         }
